# open-memory

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/core/: categories.py  config.py  schemas.py
backend/app/services/: answering.py  classifier.py  ingest_assessment.py  pipeline.py  reflection.py  retrieval.py  store.py  summarizer.py
backend/app/static/: app.js  index.html  styles.css
docs/: architecture.md  conversation-seed.md  iphone-client.md  project-context.md  reflection-loop.md
ios/OpenMemory/: README.md
ios/OpenMemory/Config/: Info.plist.example
ios/OpenMemory/OpenMemory/: CaptureModels.swift  CaptureViewModel.swift  ContentView.swift  MemoryAPI.swift  OpenMemoryApp.swift
open_memory/: cli.py  llms.py  models.py
scripts/: run_reflection.py  seed_demo.py
tests/: test_cli.py  test_pipeline.py
